[gd_scene load_steps=2 format=3 uid="uid://dctdq5611t3yl"]

[ext_resource type="Script" path="res://addons/block_code/ui/node_list/node_list.gd" id="1_dchyw"]

[node name="NodeList" type="MarginContainer"]
offset_right = 400.0
offset_bottom = 300.0
script = ExtResource("1_dchyw")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Nodes" type="GridContainer" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
columns = 4

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="CreateNode" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Create Node"

[node name="Overlay" type="MarginContainer" parent="."]
visible = false
layout_mode = 2

[node name="Panel" type="Panel" parent="Overlay"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Overlay"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="Overlay/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Overlay/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Choose a node to create:"

[node name="NodeClassList" type="VBoxContainer" parent="Overlay/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="HBoxContainer/VBoxContainer/CreateNode" to="." method="_on_create_node_pressed"]
